--- a/src/App.scss
+++ b/src/App.scss
@@ -1,38 +1,19 @@
-.App {
-  text-align: center;
+@import "./assets/scss/breakpoints-variables";
+
+.background{
+    position: relative;
+    height: 100vh;
+    background-color: $dark-blue-100;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.background-img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    background-image: url('./assets/images/bg-desktop-dark.jpg');
+    height: 300px;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
 }
