--- a/src/assets/scss/_general.scss
+++ b/src/assets/scss/_general.scss
@@ -14,3 +14,11 @@ body {
   font-size: 18px;
   font-family: "Josefin Sans", sans-serif;
 }
+
+.container {
+  max-width: 730px;
+  margin-left: auto;
+  margin-right: auto;
+  padding-left: 12px;
+  padding-right: 12px;
+}
