--- a/src/assets/scss/_theme.scss
+++ b/src/assets/scss/_theme.scss
@@ -4,6 +4,7 @@ html {
   --theme-color-bg: #{$dark-blue-100};
 //   --theme-color-tagline-text: #{$green};
   --theme-color-text: #{$gray-blue-100};
+  --theme-color-header: #{$gray-blue-400};
 //   --secondary-button-hover-color: #{$green};
 }
 
