--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -21,5 +21,9 @@ $dark-blue-700: hsl(237, 14%, 26%);
 //breakpoints
 $sm-width: 375px;
 $lg-width: 1440px;
+$container-max-width: 730px;
+
+//font-sizes
+$font-size-text: 18px;
 
 
