make toggle functions working

--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -1,6 +1,6 @@
 //colors
 $bright-blue: hsl(220, 98%, 61%);
-$check-background:  linear-gradient hsl(192, 100%, 67%) to hsl(280, 87%, 65%);
+$check-background:hsl(192, 100%, 67%) to hsl(280, 87%, 65%);
 
 //light theme
 $gray-blue-100: hsl(0, 0%, 98%);
