--- a/src/components/todo/todo.scss
+++ b/src/components/todo/todo.scss
@@ -1,50 +1,44 @@
 @import "../../assets/scss/breakpoints-variables";
 
 .todo {
-  margin-top: 30px;
+  margin-top: 40px;
+  margin-bottom: 30px;
 }
 
-span {
+input,
+li {
+  position: relative;
   display: flex;
+  flex-direction: row-reverse;
+  justify-content: flex-end;
   align-items: center;
-  flex-direction: row;
-  background-color: $dark-blue-200;
-  padding-left: 20px;
+  width: 100%;
+  padding: 20px;
+  height: 75px;
   border-radius: 5px;
+  border: none;
+  background-color: $dark-blue-200;
+  color: $dark-blue-300;
+  font-size: $font-size-text;
 
-  input, li {
-    display: flex;
-    align-items: center;
-    width: 100%;
-    padding: 20px;
-    height: 75px;
-    padding-left: 30px;
-    border-radius: 5px;
-    border: none;
-    background-color: $dark-blue-200;
-    color: $dark-blue-300;
+  &::placeholder {
+    color: var(--theme-color-header);
     font-size: $font-size-text;
+  }
 
-    &::placeholder {
-      color: var(--theme-color-header);
-      font-size: $font-size-text;
-    }
+  &:focus {
+    outline: none;
+  }
 
-    &:focus {
-        outline: none;
-    }
+  span {
+    width: 30px;
+    height: 30px;
+    border: 2px solid $dark-blue-600;
+    border-radius: 20px;
+    margin-right: 30px;
   }
 
   input {
     color: $gray-blue-200;
   }
-
-  &::before {
-    content: "";
-    width: 25px;
-    height: 25px;
-    border: 2px solid $dark-blue-600;
-    border-radius: 20px;
-  }
 }
-
