--- a/src/components/todoItem/todo-item.scss
+++ b/src/components/todoItem/todo-item.scss
@@ -13,15 +13,27 @@
     margin: 0;
   }
 
+  
 
+//   .todo-list-item {
+//     position: relative;
+//   }
 }
 
 ul.disabled {
-    @at-root & .todo-list-item {
+    .todo-list-item {
         color: $dark-blue-600;
         text-decoration: line-through;
     }
 
+    span {
+        background: url('../../assets/images/icon-check.svg'), linear-gradient(0.4turn, #57ddff, #C058F3);
+        background-repeat: no-repeat;
+        background-position: center;
+        border: none;
+        width: 30px;
+        height: 30px;
+    }
 }
 
 
