--- a/src/components/todoItem/todo-item.scss
+++ b/src/components/todoItem/todo-item.scss
@@ -7,33 +7,21 @@
     margin-top: 20px;
     border-top: none;
   }
-
-  ul {
-    padding-left: 0;
-    margin: 0;
-  }
-
-  
-
-//   .todo-list-item {
-//     position: relative;
-//   }
 }
 
 ul.disabled {
-    .todo-list-item {
-        color: $dark-blue-600;
-        text-decoration: line-through;
-    }
+  .todo-list-item {
+    color: $dark-blue-600;
+    text-decoration: line-through;
+  }
 
-    span {
-        background: url('../../assets/images/icon-check.svg'), linear-gradient(0.4turn, #57ddff, #C058F3);
-        background-repeat: no-repeat;
-        background-position: center;
-        border: none;
-        width: 30px;
-        height: 30px;
-    }
+  span {
+    background: url("../../assets/images/icon-check.svg"),
+      linear-gradient(0.4turn, #57ddff, #c058f3);
+    background-repeat: no-repeat;
+    background-position: center;
+    border: none;
+    width: 30px;
+    height: 30px;
+  }
 }
-
-
