--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -3,6 +3,7 @@ $bright-blue: hsl(220, 98%, 61%);
 $check-background:hsl(192, 100%, 67%) to hsl(280, 87%, 65%);
 
 //light theme
+$white: #FFFFFF;
 $gray-blue-100: hsl(0, 0%, 98%);
 $gray-blue-200: hsl(236, 33%, 92%);
 $gray-blue-300: hsl(233, 11%, 84%);
