--- a/src/App.scss
+++ b/src/App.scss
@@ -1,32 +1,78 @@
 @import "./assets/scss/breakpoints-variables";
 
-.background{
-    position: relative;
-    height: 100vh;
-    background-color: var(--theme-color-bg);
+.background {
+  position: relative;
+  height: 100vh;
+  background-color: var(--theme-color-bg);
 }
 
 .background-img {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    background-image: url('./assets/images/bg-desktop-dark.jpg');
-    height: 300px;
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  background-image: var(--theme-background-image);
+  height: 300px;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
 }
 
 .app-header {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    margin-top: 80px;
-    align-items: center;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  margin-top: 80px;
+  align-items: center;
 }
 
 .app-switch {
-    width: 30px;
-    height: 30px;
+  width: 30px;
+  height: 30px;
+}
+
+/* CIRCLE STYLES AND ANIMATION */
+
+.darkCircle {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: var(--theme-color-bg);
+  clip-path: circle(0% at 50% 0%);
+  z-index: 1;
+}
+
+.lightCircle {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: var(--theme-color-bg);
+  clip-path: circle(0% at 50% 0%);
+  z-index: 1;
+}
+
+.darkCircle.grow {
+  animation-name: circle-grow;
+  animation-duration: 0.7s;
+  animation-timing-function: ease-in-out;
+}
+
+.lightCircle.grow {
+  animation-name: circle-grow;
+  animation-duration: 0.7s;
+  animation-timing-function: ease-in-out;
+}
+
+@keyframes circle-grow {
+  0% {
+    clip-path: circle(0% at 50% 0%);
+  }
+
+  100% {
+    clip-path: circle(150% at 50% 0%);
+  }
 }
