--- a/src/components/todo/todo.scss
+++ b/src/components/todo/todo.scss
@@ -16,8 +16,8 @@ li {
   height: 75px;
   border-radius: 5px;
   border: none;
-  background-color: $dark-blue-200;
-  color: $dark-blue-300;
+  background-color: var(--theme-color-list);
+  color: var(--theme-color-text);
   font-size: $font-size-text;
 
   &::placeholder {
@@ -33,7 +33,7 @@ li {
 span {
   width: 30px;
   height: 30px;
-  border: 2px solid $dark-blue-600;
+  border: var(--theme-color-radio);
   border-radius: 20px;
   margin-right: 30px;
 }
