--- a/src/App.scss
+++ b/src/App.scss
@@ -24,6 +24,8 @@
   justify-content: space-between;
   margin-top: 80px;
   align-items: center;
+  text-transform: uppercase;
+  letter-spacing: 10px;
 }
 
 .app-switch {
