--- a/src/assets/scss/_general.scss
+++ b/src/assets/scss/_general.scss
@@ -25,4 +25,15 @@ body {
   padding-right: 12px;
   z-index: 2;
   position: relative;
+  pointer-events: auto;
+
+  &--cover {
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 3;
+    width: 100vw;
+    height: 100vh;
+    pointer-events: none;
+  }
 }
