--- a/src/components/todo/todo.scss
+++ b/src/components/todo/todo.scss
@@ -5,14 +5,18 @@
   margin-bottom: 30px;
 }
 
+ul {
+  padding-left: 0;
+  margin: 0;
+}
+
 input,
 li {
   position: relative;
   display: flex;
-  flex-direction: row-reverse;
-  justify-content: flex-end;
+  flex-direction: row;
+  justify-content: flex-start;
   align-items: center;
-  width: 100%;
   height: 75px;
   border-radius: 5px;
   border: none;
@@ -30,20 +34,12 @@ li {
   }
 }
 
-span {
-  width: 30px;
-  height: 30px;
-  border: var(--theme-color-radio);
-  border-radius: 20px;
-  margin-right: 30px;
-}
-
 li {
   cursor: pointer;
   padding: 20px;
-}
 
-ul {
-  padding-left: 0;
-  margin: 0;
+  &:first-of-type {
+    margin-bottom: 20px;
+    border-top: none;
+  }
 }
