--- a/src/components/todo/todo.scss
+++ b/src/components/todo/todo.scss
@@ -2,7 +2,6 @@
 
 .todo {
   margin-top: 40px;
-  margin-bottom: 30px;
 }
 
 ul {
@@ -27,6 +26,8 @@ li {
   &::placeholder {
     color: var(--theme-color-header);
     font-size: $font-size-text;
+    font-size: $font-size-text;
+    font-family: "Josefin Sans", sans-serif;
   }
 
   &:focus {
