--- a/src/components/todo/todo.scss
+++ b/src/components/todo/todo.scss
@@ -9,9 +9,8 @@ ul {
   margin: 0;
 }
 
-input,
-li {
-  position: relative;
+li,
+form {
   display: flex;
   flex-direction: row;
   justify-content: flex-start;
@@ -20,27 +19,44 @@ li {
   border-radius: 5px;
   border: none;
   background-color: var(--theme-color-list);
-  color: var(--theme-color-text);
   font-size: $font-size-text;
+  padding: 20px;
+}
 
-  &::placeholder {
-    color: var(--theme-color-header);
-    font-size: $font-size-text;
-    font-size: $font-size-text;
-    font-family: "Josefin Sans", sans-serif;
-  }
+li {
+  color: var(--theme-color-text);
 
   &:focus {
     outline: none;
   }
 }
 
-li {
-  cursor: pointer;
-  padding: 20px;
+form {
+  &::before {
+    content: "";
+    width: 30px;
+    height: 30px;
+    border: var(--theme-color-radio);
+    border-radius: 20px;
+    margin-right: 30px;
+  }
 
-  &:first-of-type {
-    margin-bottom: 20px;
-    border-top: none;
+  input {
+    background-color: var(--theme-color-list);
+    border: none;
+  }
+
+  button:focus {
+    all: unset;
+  }
+}
+
+button {
+  all: unset;
+
+  &:focus {
+    border: var(--theme-color-radio);
+    padding: 5px;
+    border-radius: 5px;
   }
 }
