--- a/src/components/todoItem/todo-item.scss
+++ b/src/components/todoItem/todo-item.scss
@@ -2,6 +2,12 @@
 
 .todo-list-item {
   border-top: var(--theme-color-border);
+  cursor: pointer;
+
+  &:first-of-type {
+    margin-top: 20px;
+    border-top: none;
+  }
 
   &::before {
     content: "";
@@ -10,16 +16,6 @@
     border: var(--theme-color-radio);
     border-radius: 20px;
     margin-right: 30px;
-  }
-
-  button {
-    all: unset;
-
-    &:focus {
-      border: var(--theme-color-radio);
-      padding: 5px;
-      border-radius: 5px;
-    }
   }
 }
 
