--- a/src/assets/scss/_general.scss
+++ b/src/assets/scss/_general.scss
@@ -1,10 +1,11 @@
-@import './variables';
+@import "./variables";
 
 * {
   box-sizing: border-box;
 }
 
-body, html {
+body,
+html {
   margin: 0;
   padding: 0;
   width: 100%;
@@ -15,6 +16,7 @@ body, html {
 body {
   font-size: $font-size-text;
   font-family: "Josefin Sans", sans-serif;
+  position: relative;
 }
 
 .container {
@@ -23,17 +25,5 @@ body {
   margin-right: auto;
   padding-left: 12px;
   padding-right: 12px;
-  z-index: 2;
-  position: relative;
   pointer-events: auto;
-
-  &--cover {
-    position: absolute;
-    top: 0;
-    left: 0;
-    z-index: 3;
-    width: 100vw;
-    height: 100vh;
-    pointer-events: none;
-  }
 }
