--- a/src/assets/scss/_theme.scss
+++ b/src/assets/scss/_theme.scss
@@ -9,7 +9,7 @@
     --theme-color-radio: 2px solid #{$dark-blue-600};
     --theme-color-border: 1px solid #{$dark-blue-600};
     --theme-background-image: url('../images/bg-desktop-dark.jpg');
-    transition: background-color 0.3s ease-in-out 0.4s, color 0.7s ease-in-out;
+    transition: background-color 0.1s linear 0.4s;
   }
   
   .theme--light {
@@ -20,22 +20,5 @@
     --theme-color-radio: 2px solid #{$gray-blue-200};
     --theme-color-border: 1px solid #{$gray-blue-200};
     --theme-background-image: url('../images/bg-desktop-light.jpg');
-    transition: background-color 0.3s ease-in-out 0.4s, color 0.7s ease-in-out;
+    transition: background-color 0.1s linear 0.4s;
   }
-
-
-// @media (prefers-color-scheme: light) {
-//   html {
-//     --theme-color-bg: #{$gray-blue-100};
-//     --theme-color-text: #{$gray-blue-500};
-//     --theme-color-header: #{$gray-blue-400};
-//     --theme-background-image: url('../images/bg-desktop-light.jpg');
-//   }
-  
-//   .theme--switch {
-//     --theme-color-bg: #{$dark-blue-100};
-//     --theme-color-text: #{$dark-blue-300};
-//     --theme-color-header: #{$dark-blue-500};
-//     --theme-background-image: url('../images/bg-desktop-dark.jpg');
-//   }
-// }
