--- a/src/assets/scss/_typography.scss
+++ b/src/assets/scss/_typography.scss
@@ -10,6 +10,10 @@ h1 {
   color: $gray-blue-200;
 }
 
+button {
+  font-family: "Josefin Sans", sans-serif;
+}
+
 input {
   font-size: $font-size-text;
   color: var(--theme-color-text);
