--- a/src/components/todo/todo.scss
+++ b/src/components/todo/todo.scss
@@ -35,12 +35,14 @@ form {
   
   &::before {
     content: "";
+    flex-shrink: 0;
     width: 30px;
     height: 30px;
     border: var(--theme-color-radio);
     border-radius: 20px;
     margin-left: 20px;
     margin-right: 30px;
+    transition: all 0.1s linear 0.4s;
   }
 
   input {
